# caesar

./: .gitattributes  .gitignore  Containerfile  README.md  pyproject.toml  scratch.ipynb
assets/: dashExtensions_default.js
caesar/: app.py  gaius.py  layout.py
caesar/assets/: cropstyle.js
caesar/components/: __init__.py  map.py
caesar/data/: __init__.py  ar_crops.jsonl  data.py
caesar/pages/: index.py
get_data/: ar_hex_map.py  cdl_legend.json  get_icons.py
